@@ -2,14 +2,15 @@ package uk.gov.hmcts.reform.prl.services.citizen;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.commons.collections.CollectionUtils;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.http.ResponseEntity;
 import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
@@ -27,7 +28,6 @@ import uk.gov.hmcts.reform.prl.enums.YesNoNotApplicable;
 import uk.gov.hmcts.reform.prl.enums.caseflags.PartyRole;
 import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaCitizenServingRespondentsEnum;
 import uk.gov.hmcts.reform.prl.mapper.citizen.CaseDataMapper;
-import uk.gov.hmcts.reform.prl.models.CitizenUpdatedCaseData;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.OrderDetails;
 import uk.gov.hmcts.reform.prl.models.OtherOrderDetails;
@@ -97,15 +97,15 @@ import java.util.Map;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
-import static org.testng.AssertJUnit.assertNull;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AWAITING_HEARING_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CITIZEN;
@@ -138,16 +138,13 @@ import static uk.gov.hmcts.reform.prl.services.citizen.CaseService.OCCUPATION_OR
 import static uk.gov.hmcts.reform.prl.services.citizen.CaseService.YYYY_MM_DD;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
-@RunWith(MockitoJUnitRunner.Silent.class)
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class CaseServiceTest {
 
-    public static final String authToken = "Bearer TestAuthToken";
-    public static final String s2sToken = "Bearer TestAuthToken";
-    public static final String caseId = "1234567891234567";
-    public static final String eventId = "1234567891234567";
-
-    public static final String accessCode = "123456";
-
+    public static final String AUTH_TOKEN = "Bearer TestAuthToken";
+    public static final String S2S_TOKEN = "Bearer TestAuthToken";
+    public static final String CASE_ID = "1234567891234567";
     public static final String CA_SOA_PERSONAL_APPLICANT = "CAN7_SOA_PERSONAL_APPLICANT,CAN9_SOA_PERSONAL_APPLICANT";
     public static final String DA_SOA_PERSONAL_APPLICANT = "DN2_SOA_PERSONAL_APPLICANT";
     public static final String CA_SOA_APPLICANT = "CAN4_SOA_PERSONAL_NON_PERSONAL_APPLICANT";
@@ -202,7 +199,6 @@ public class CaseServiceTest {
     private UserDetails userDetails;
     private Map<String, Object> caseDataMap;
     private PartyDetails partyDetails;
-    private CitizenUpdatedCaseData citizenUpdatedCaseData;
 
     private final UUID testUuid = UUID.fromString("00000000-0000-0000-0000-000000000000");
     private final UUID testUuid1 = UUID.fromString("06eef861-d2aa-4dbd-acc0-9244a1dfab17");
@@ -224,8 +220,8 @@ public class CaseServiceTest {
 
     private OrderDetails orderDetails;
 
-    @Before
-    public void setup() {
+    @BeforeEach
+     void setup() {
         partyDetails = PartyDetails.builder()
             .firstName("")
             .lastName("test")
@@ -379,7 +375,7 @@ public class CaseServiceTest {
         map.put("fm5StatementsDocument",fm5QuarantineLegalDoc);
 
         //When
-        when(userService.getUserDetails(authToken)).thenReturn(userDetails);
+        when(userService.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(objectMapper.convertValue(quarantineLegalDoc, Map.class)).thenReturn(map);
         when(objectMapper.convertValue(fm5QuarantineLegalDoc, Map.class)).thenReturn(map);
 
@@ -409,7 +405,7 @@ public class CaseServiceTest {
             .id("00000000-0000-0000-0000-000000000000")
             .roles(List.of(Roles.CITIZEN.getValue())).build();
         //When
-        when(userService.getUserDetails(authToken)).thenReturn(userDetails);
+        when(userService.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
 
         ServedParties servedParties = ServedParties.builder()
             .partyId("00000000-0000-0000-0000-000000000000")
@@ -439,49 +435,41 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCase() {
+     void testGetCase() {
         assertNotNull(caseService.getCase("", ""));
     }
 
     @Test
-    public void testRetrieveCases() {
+     void testRetrieveCases() {
         assertNotNull(caseService.retrieveCases("", ""));
     }
 
     @Test
-    public void testRetrieveCasesTwoParams() {
+     void testRetrieveCasesTwoParams() {
         assertNotNull(caseService.retrieveCases("", ""));
     }
 
     @Test
-    public void shouldCreateCase() {
-        //Given
-        CaseData caseData = CaseData.builder()
-            .id(1234567891234567L)
-            .applicantCaseName("test")
-            .build();
+     void shouldCreateCase() {
+
         userDetails = UserDetails
             .builder()
             .roles(List.of(COURT_ADMIN_ROLE))
             .email("test@gmail.com")
             .build();
 
-        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
-        CaseDetails caseDetails = CaseDetails.builder().id(
-            1234567891234567L).data(stringObjectMap).build();
-
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
-        when(caseRepository.createCase(authToken, caseData)).thenReturn(caseDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
+        when(caseRepository.createCase(AUTH_TOKEN, caseData)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.createCase(caseData, authToken);
+        CaseDetails actualCaseDetails =  caseService.createCase(caseData, AUTH_TOKEN);
 
         //Then
         assertThat(actualCaseDetails).isEqualTo(caseDetails);
     }
 
     @Test
-    public void testGetPartyCaseFlags() {
+     void testGetPartyCaseFlags() {
         User user1 = User.builder().idamId("applicant-1").build();
         User user2 = User.builder().idamId("respondent-1").build();
         User user3 = User.builder().idamId("respondent-2").build();
@@ -519,7 +507,7 @@ public class CaseServiceTest {
             element(flagDetailRequestForHearing)
         )).build();
 
-        CaseData caseData = CaseData.builder()
+        CaseData caseData1 = CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
             .applicants(Collections.singletonList(element(applicant)))
@@ -527,17 +515,17 @@ public class CaseServiceTest {
             .allPartyFlags(AllPartyFlags.builder().caApplicant1ExternalFlags(applicant1PartyFlags).caRespondent1ExternalFlags(
                 respondent1PartyFlags).caRespondent2ExternalFlags(respondent2PartyFlags).build())
             .build();
-        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
+        Map<String, Object> stringObjectMap = caseData1.toMap(new ObjectMapper());
         CaseDetails caseDetailsCaseFlags = CaseDetails.builder()
             .id(1234567891234567L)
             .data(stringObjectMap)
             .build();
-        when(caseService.getCase(authToken, caseId)).thenReturn(caseDetailsCaseFlags);
-        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
+        when(caseService.getCase(AUTH_TOKEN, CASE_ID)).thenReturn(caseDetailsCaseFlags);
+        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData1);
 
         // Unhappy path - when the request is valid, but party details is invalid.
-        Flags invalidUserExternalFlag = caseService.getPartyCaseFlags(authToken, caseId, "applicant-2");
-        Assert.assertNull(invalidUserExternalFlag);
+        Flags invalidUserExternalFlag = caseService.getPartyCaseFlags(AUTH_TOKEN, CASE_ID, "applicant-2");
+        assertNull(invalidUserExternalFlag);
 
         // Happy path 1 - when the request is valid and respondent party external flags is retrieved from the existing case data.
         when(partyLevelCaseFlagsService.getPartyCaseDataExternalField(
@@ -546,9 +534,9 @@ public class CaseServiceTest {
             1
         )).thenReturn("caRespondent2ExternalFlags");
         when(objectMapper.convertValue(Mockito.any(), Mockito.eq(Flags.class))).thenReturn(respondent2PartyFlags);
-        Flags respondentExternalFlag = caseService.getPartyCaseFlags(authToken, caseId, "respondent-2");
-        Assert.assertNotNull(respondentExternalFlag);
-        Assert.assertEquals("Respondent 2 FN Respondent 2 LN", respondentExternalFlag.getPartyName());
+        Flags respondentExternalFlag = caseService.getPartyCaseFlags(AUTH_TOKEN, CASE_ID, "respondent-2");
+        assertNotNull(respondentExternalFlag);
+        assertEquals("Respondent 2 FN Respondent 2 LN", respondentExternalFlag.getPartyName());
 
         // Happy path 2 - when the request is valid and applicant party external flags is retrieved from the existing case data.
         when(partyLevelCaseFlagsService.getPartyCaseDataExternalField(
@@ -557,42 +545,36 @@ public class CaseServiceTest {
             0
         )).thenReturn("caApplicant1ExternalFlags");
         when(objectMapper.convertValue(Mockito.any(), Mockito.eq(Flags.class))).thenReturn(applicant1PartyFlags);
-        Flags applicantExternalFlag = caseService.getPartyCaseFlags(authToken, caseId, "applicant-1");
-        Assert.assertNotNull(applicantExternalFlag);
-        Assert.assertEquals(applicant1PartyFlags, applicantExternalFlag);
+        Flags applicantExternalFlag = caseService.getPartyCaseFlags(AUTH_TOKEN, CASE_ID, "applicant-1");
+        assertNotNull(applicantExternalFlag);
+        assertEquals(applicant1PartyFlags, applicantExternalFlag);
     }
 
     @Test
-    public void shouldUpdateCaseWithCaseName() throws IOException {
+     void shouldUpdateCaseWithCaseName() throws IOException {
 
         C100RebuildData c100RebuildData = C100RebuildData.builder()
             .c100RebuildApplicantDetails(TestUtil.readFileFrom("classpath:c100-rebuild/appl.json"))
             .c100RebuildRespondentDetails(TestUtil.readFileFrom("classpath:c100-rebuild/resp.json"))
             .build();
 
-        CaseData caseData = CaseData.builder()
+        CaseData caseData1 = CaseData.builder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
 
-        CaseDetails caseDetails = mock(CaseDetails.class);
-
-        CaseData updatedCaseData = caseData.toBuilder()
+        CaseData updatedCaseData = caseData1.toBuilder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .applicantCaseName("applicantLN1 V respLN1")
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -600,7 +582,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void shouldUpdateCaseWhenNonCitizenEventId() throws IOException {
+     void shouldUpdateCaseWhenNonCitizenEventId() throws IOException {
 
         C100RebuildData c100RebuildData = C100RebuildData.builder()
             .c100RebuildApplicantDetails(TestUtil.readFileFrom("classpath:c100-rebuild/appl.json"))
@@ -620,11 +602,11 @@ public class CaseServiceTest {
             .applicantCaseName("applicantLN1 V respLN1")
             .build();
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData,
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData,
                                        C100_REQUEST_SUPPORT)).thenReturn(caseDetails1);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -634,34 +616,27 @@ public class CaseServiceTest {
 
 
     @Test
-    public void shouldUpdateCaseWithCaseNameButNoApplicantOrRespondentDetails() throws IOException {
+     void shouldUpdateCaseWithCaseNameButNoApplicantOrRespondentDetails() throws IOException {
 
         C100RebuildData c100RebuildData = C100RebuildData.builder()
             .build();
 
-        CaseData caseData = CaseData.builder()
+        CaseData caseData1 = CaseData.builder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
-
-        CaseDetails caseDetails = mock(CaseDetails.class);
-
-        CaseData updatedCaseData = caseData.toBuilder()
+        CaseData updatedCaseData = caseData1.toBuilder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
 
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -669,28 +644,21 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void shouldUpdateCaseWithCaseNameButNoC100RebuildData() throws IOException {
+     void shouldUpdateCaseWithCaseNameButNoC100RebuildData() throws IOException {
 
-        CaseData caseData = CaseData.builder()
-            .id(1234567891234567L)
-            .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
 
-        CaseDetails caseDetails = mock(CaseDetails.class);
+
 
         CaseData updatedCaseData = caseData.toBuilder()
             .id(1234567891234567L)
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -698,30 +666,19 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void shouldUpdateCaseWithCaseNameButCaseNameExists() throws IOException {
-
-        CaseData caseData = CaseData.builder()
-            .id(1234567891234567L)
-            .applicantCaseName("test")
-            .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
-
-        CaseDetails caseDetails = mock(CaseDetails.class);
-
+     void shouldUpdateCaseWithCaseNameButCaseNameExists() throws IOException {
         CaseData updatedCaseData = caseData.toBuilder()
             .id(1234567891234567L)
             .applicantCaseName("test")
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -729,27 +686,29 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void getCaseWithHearing() {
-        when(coreCaseDataService.findCaseById(authToken, caseId)).thenReturn(caseDetails);
+     void getCaseWithHearing() {
+        when(coreCaseDataService.findCaseById(AUTH_TOKEN, CASE_ID)).thenReturn(caseDetails);
         when(objectMapper.convertValue(caseDetails, CaseData.class)).thenReturn(caseData);
-        when(hearingService.getHearings(authToken, "123")).thenReturn(Hearings.hearingsWith().build());
-        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(authToken, caseId, "yes");
+        when(hearingService.getHearings(AUTH_TOKEN, "123")).thenReturn(Hearings.hearingsWith().build());
+        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(AUTH_TOKEN,
+                                                                                                 CASE_ID, "yes");
         assertNotNull(caseDataWithHearingResponse.getHearings());
     }
 
     @Test
-    public void getCaseWithHearingHearingNotNeeded() {
-        when(coreCaseDataService.findCaseById(authToken, caseId)).thenReturn(caseDetails);
+     void getCaseWithHearingHearingNotNeeded() {
+        when(coreCaseDataService.findCaseById(AUTH_TOKEN, CASE_ID)).thenReturn(caseDetails);
         when(objectMapper.convertValue(caseDetails, CaseData.class)).thenReturn(caseData);
-        when(hearingService.getHearings(authToken, caseId)).thenReturn(Hearings.hearingsWith().build());
-        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(authToken, caseId, "dud");
+        when(hearingService.getHearings(AUTH_TOKEN, CASE_ID)).thenReturn(Hearings.hearingsWith().build());
+        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(AUTH_TOKEN,
+                                                                                                 CASE_ID, "dud");
         assertNull(caseDataWithHearingResponse.getHearings());
     }
 
     @Test
-    public void testGetCitizenDocuments() {
+     void testGetCitizenDocuments() {
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -759,13 +718,13 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenDocumentsWithFm5Reminders() {
+     void testGetCitizenDocumentsWithFm5Reminders() {
         CaseData citizenCaseData1 = citizenCaseData.toBuilder().fm5ReminderNotificationDetails(
                 FM5ReminderNotificationDetails.builder().fm5RemindersSent("YES").build())
             .documentManagementDetails(DocumentManagementDetails.builder().citizenQuarantineDocsList(List.of(
                 element(fm5QuarantineLegalDoc))).build()).build();
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -775,13 +734,13 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenDocumentsWithFm5RemindersSetToNO() {
+     void testGetCitizenDocumentsWithFm5RemindersSetToNO() {
         CaseData citizenCaseData1 = citizenCaseData.toBuilder().fm5ReminderNotificationDetails(
                 FM5ReminderNotificationDetails.builder().fm5RemindersSent("NO").build())
             .documentManagementDetails(DocumentManagementDetails.builder().citizenQuarantineDocsList(List.of(
                 element(fm5QuarantineLegalDoc))).build()).build();
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -791,7 +750,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenDocumentsWithFm5RemindersWhenPartyIdIsDiffer() {
+     void testGetCitizenDocumentsWithFm5RemindersWhenPartyIdIsDiffer() {
 
         QuarantineLegalDoc quarantineLegalDoc1 = QuarantineLegalDoc.builder()
             .fm5StatementsDocument(Document.builder().build())
@@ -808,7 +767,7 @@ public class CaseServiceTest {
             .documentManagementDetails(DocumentManagementDetails.builder().citizenQuarantineDocsList(List.of(
                 element(quarantineLegalDoc1))).build()).build();
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -819,12 +778,12 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testEmptyCitizenDocumentsWhenNoDocs() {
+     void testEmptyCitizenDocumentsWhenNoDocs() {
         //Given
         citizenCaseData = CaseData.builder().state(State.DECISION_OUTCOME).build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -834,7 +793,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testFilterNonAccessibleCitizenDocuments() {
+     void testFilterNonAccessibleCitizenDocuments() {
         //Given
         QuarantineLegalDoc otherPartyDoc = QuarantineLegalDoc.builder()
             .uploaderRole(CITIZEN)
@@ -851,7 +810,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -859,7 +818,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenApplicantOrdersC100() {
+     void testGetCitizenApplicantOrdersC100() {
         //Given
         caseData = caseData.toBuilder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -869,11 +828,11 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenOrders()));
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
@@ -883,7 +842,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenRespondentOrdersC100() {
+     void testGetCitizenRespondentOrdersC100() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -903,7 +862,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertNotNull(citizenDocumentsManagement.getCitizenApplicationPacks());
@@ -916,9 +875,9 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenApplicantOrdersFL401() {
+     void testGetCitizenApplicantOrdersFL401() {
         //Given
-        finalServedApplicationDetailsList.get(0).getValue().getBulkPrintDetails().get(0).getValue().setPartyIds(testUuid.toString());
+        finalServedApplicationDetailsList.getFirst().getValue().getBulkPrintDetails().getFirst().getValue().setPartyIds(testUuid.toString());
         caseData = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
             .state(State.DECISION_OUTCOME)
@@ -928,7 +887,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -941,7 +900,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenRespondentOrdersFL401() {
+     void testGetCitizenRespondentOrdersFL401() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -959,7 +918,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -972,7 +931,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedC100() {
+     void testCitizenOrdersSosCompletedC100() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -990,7 +949,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertNotNull(citizenDocumentsManagement.getCitizenApplicationPacks());
@@ -998,11 +957,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(CA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(CA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401() {
+     void testCitizenOrdersSosCompletedFL401() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -1038,7 +997,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1046,11 +1005,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersWithSolicitorUploadedApplicationFL401() {
+     void testCitizenOrdersWithSolicitorUploadedApplicationFL401() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -1087,7 +1046,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1096,7 +1055,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401ForOccupationOrder() {
+     void testCitizenOrdersSosCompletedFL401ForOccupationOrder() {
 
         //Given
         OrderDetails orderDetails1 = orderDetails.toBuilder()
@@ -1144,7 +1103,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1152,11 +1111,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401CustomFields1() {
+     void testCitizenOrdersSosCompletedFL401CustomFields1() {
 
         //Given
         OrderDetails orderDetails1 = orderDetails.toBuilder()
@@ -1200,7 +1159,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1208,11 +1167,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401ForOccupationOrderWithNoPowerOfArrest() {
+     void testCitizenOrdersSosCompletedFL401ForOccupationOrderWithNoPowerOfArrest() {
         //Given
         OrderDetails orderDetails1 = orderDetails.toBuilder()
             .dateCreated(LocalDateTime.now())
@@ -1263,7 +1222,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1271,12 +1230,12 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
 
     @Test
-    public void testCitizenApplicantSoaPersonalServiceC100() {
+     void testCitizenApplicantSoaPersonalServiceC100() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(UNREPRESENTED_APPLICANT)
@@ -1294,12 +1253,12 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getRespondentSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getRespondentSoaPack()));
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
         assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
@@ -1308,7 +1267,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSoaPersonalServiceFL401() {
+     void testCitizenApplicantSoaPersonalServiceFL401() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(UNREPRESENTED_APPLICANT)
@@ -1327,15 +1286,15 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenOrders()));
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getRespondentSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getRespondentSoaPack()));
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
         assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
@@ -1343,7 +1302,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedC100() {
+     void testCitizenApplicantSosCompletedC100() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(PERSONAL_SERVICE_SERVED_BY_CA)
@@ -1364,11 +1323,11 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertNotNull(citizenDocumentsManagement.getCitizenApplicationPacks());
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
         assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
@@ -1376,7 +1335,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedFL401() {
+     void testCitizenApplicantSosCompletedFL401() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(PERSONAL_SERVICE_SERVED_BY_CA)
@@ -1397,7 +1356,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1410,7 +1369,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnly() {
+     void testCitizenApplicantSosCompletedPostOnly() {
         //Given
         caseData = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1426,7 +1385,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1439,7 +1398,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnlyWhenCaseStatePrepareForHearingConductHearing() {
+     void testCitizenApplicantSosCompletedPostOnlyWhenCaseStatePrepareForHearingConductHearing() {
         OrderDetails orderDetails1 = orderDetails.toBuilder()
             .dateCreated(LocalDateTime.now())
             .fl404CustomFields(FL404.builder().fl404bIsPowerOfArrest1(NO).fl404bIsPowerOfArrest2(YES)
@@ -1469,7 +1428,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1481,7 +1440,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnlyWhenBothPartiesIdamIdIsNull() {
+     void testCitizenApplicantSosCompletedPostOnlyWhenBothPartiesIdamIdIsNull() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1497,7 +1456,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1507,7 +1466,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnlyWhenCaseStateIsJudicialReview() {
+     void testCitizenApplicantSosCompletedPostOnlyWhenCaseStateIsJudicialReview() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1524,7 +1483,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1534,7 +1493,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testRespondentCitizenDocOrders() {
+     void testRespondentCitizenDocOrders() {
         List<Element<FL401Proceedings>> fl401Proceedings = new ArrayList<>();
         fl401Proceedings.add(ElementUtils.element(FL401Proceedings.builder().uploadRelevantOrder(Document.builder().build()).build()));
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
@@ -1558,7 +1517,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1567,7 +1526,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenDocOrdersWhenRespondentsFl401IdamIdIsNull() {
+     void testCitizenDocOrdersWhenRespondentsFl401IdamIdIsNull() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1583,7 +1542,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1594,7 +1553,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testCitizenDocOrdersWhenC100IsCaseType() {
+     void testCitizenDocOrdersWhenC100IsCaseType() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -1610,7 +1569,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1618,12 +1577,12 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
 
     @Test
-    public void testCitizenDocOrdersWhenRespondentPartyIdamIdIsNull() {
+     void testCitizenDocOrdersWhenRespondentPartyIdamIdIsNull() {
         List<Element<PartyDetails>> partyDetailsList = new ArrayList<>();
         partyDetailsList.add(Element.<PartyDetails>builder()
                                  .value(PartyDetails.builder()
@@ -1647,7 +1606,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1655,11 +1614,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNull() {
+     void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNull() {
         List<Element<PartyDetails>> partyDetailsList = new ArrayList<>();
         partyDetailsList.add(Element.<PartyDetails>builder()
                                  .value(PartyDetails.builder()
@@ -1683,7 +1642,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1693,7 +1652,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNotSameAsUser() {
+     void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNotSameAsUser() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1727,7 +1686,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1737,7 +1696,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenDocOrdersWhenApplicationServedBy() {
+     void testCitizenDocOrdersWhenApplicationServedBy() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1793,7 +1752,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1804,7 +1763,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testCitizenDocOrdersWhenApplicationServedByWhenPartyIdsDoNotMatch() {
+     void testCitizenDocOrdersWhenApplicationServedByWhenPartyIdsDoNotMatch() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1860,7 +1819,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1871,7 +1830,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testCitizenDocOrdersWhenApplicationServedByNullPointerExceptionScenario() {
+     void testCitizenDocOrdersWhenApplicationServedByNullPointerExceptionScenario() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1937,7 +1896,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1948,7 +1907,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testUpdateCitizenRaFlagsWithNullPartyDetailsMeta() {
+     void testUpdateCitizenRaFlagsWithNullPartyDetailsMeta() {
         //Given
         CitizenPartyFlagsRequest citizenPartyFlagsRequest = CitizenPartyFlagsRequest.builder()
             .partyExternalFlags(FlagsRequest.builder().build())
@@ -1962,7 +1921,7 @@ public class CaseServiceTest {
         when(coreCaseDataService.eventRequest(Mockito.any(), Mockito.anyString())).thenReturn(EventRequestData.builder()
                                                                                                   .build());
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -1970,13 +1929,13 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testUpdateCitizenRaFlagsBadRequest() {
+     void testUpdateCitizenRaFlagsBadRequest() {
         //Given
         CitizenPartyFlagsRequest citizenPartyFlagsRequest = CitizenPartyFlagsRequest.builder()
             .partyExternalFlags(FlagsRequest.builder().build())
             .build();
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -1984,7 +1943,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testUpdateCitizenRaFlagsWithPartyDetailsMetaEmptyExtCaseFlag() {
+     void testUpdateCitizenRaFlagsWithPartyDetailsMetaEmptyExtCaseFlag() {
         //Given
         caseData = caseData.toBuilder().caseTypeOfApplication(C100_CASE_TYPE).build();
         CitizenPartyFlagsRequest citizenPartyFlagsRequest = CitizenPartyFlagsRequest.builder()
@@ -2001,7 +1960,7 @@ public class CaseServiceTest {
         when(coreCaseDataService.eventRequest(Mockito.any(), Mockito.anyString())).thenReturn(EventRequestData.builder()
                                                                                                   .build());
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -2009,7 +1968,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testUpdateCitizenRaFlagsWithPartyDetailsMetaWithExtCaseFlag() {
+     void testUpdateCitizenRaFlagsWithPartyDetailsMetaWithExtCaseFlag() {
         //Given
         caseData = caseData.toBuilder().caseTypeOfApplication(C100_CASE_TYPE).build();
         when(idamClient.getUserInfo(Mockito.anyString())).thenReturn(UserInfo.builder().uid("test").build());
@@ -2032,7 +1991,7 @@ public class CaseServiceTest {
             .partyIdamId(TEST_UUID)
             .build();
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -2082,8 +2041,9 @@ public class CaseServiceTest {
 
     @Test
     public void testFetchIdamRoles() {
+     void testFetchIdamRoles() {
         when(roleAssignmentService.fetchIdamAmRoles(Mockito.anyString(), Mockito.anyString())).thenReturn(Map.of("test", "role"));
-        Map<String, String> roles = caseService.fetchIdamAmRoles(authToken, "test");
+        Map<String, String> roles = caseService.fetchIdamAmRoles(AUTH_TOKEN, "test");
         assertEquals("role", roles.get("test"));
     }
 
